fix: dark mode issues

--- a/src/Assets/styles/style.scss
+++ b/src/Assets/styles/style.scss
@@ -3375,9 +3375,9 @@ i.font60 {
       padding: 10px 20px;
       margin-right: 5px;
       display: block;
-      background: #f6f6f6;
+      background: $bgColor3;
       text-decoration: none;
-      color: $blue;
+      color: $textColor3;
       font-size: 15px;
       cursor: poInter;
       -webkit-border-radius: 3px;
